Fully working build. Waiting on features for server.

--- a/res/layout/activity_all_teams.xml
+++ b/res/layout/activity_all_teams.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Team Number:" />
+        android:text="Team Number:"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@android:id/list"
