--- a/res/layout/activity_edit_team.xml
+++ b/res/layout/activity_edit_team.xml
@@ -15,13 +15,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Team Number:" />
-    <TextView
+
+    <TextView
         android:id="@+id/teamNumberTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
-        android:text="" />
+        android:text=""
+        android:textSize="20sp" />
     
     <TextView
         android:id="@+id/textView2"
@@ -53,7 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView3"
-        android:ems="10" />
+        android:ems="10"
+        android:inputType="number" />
 
     <TextView
         android:id="@+id/textView4"
@@ -69,7 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView4"
-        android:ems="10" />
+        android:ems="10"
+        android:inputType="number" />
 
     <TextView
         android:id="@+id/textView5"
@@ -101,7 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView6"
-        android:text="" />
+        android:text=""
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/deleteTeamButton"
